--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boutique Flower Shop</title>
+    <title>La Bodega</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -61,13 +61,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/images/image-inicio.jpg" class="d-block w-100 carousel-img" alt="fondo1">
+                <img src="./assets/images/destacado.jpg" class="d-block w-100 carousel-img" alt="fondo1">
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/image-inicio2.jpg" class="d-block w-100 carousel-img" alt="fondo2">
+                <img src="./assets/images/destacado2.jpg" class="d-block w-100 carousel-img" alt="fondo2">
               </div>
               <div class="carousel-item">
-                <img src="./assets/images/image-inicio3.jpg" class="d-block w-100 carousel-img" alt="fondo3">
+                <img src="./assets/images/destacado3.jpg" class="d-block w-100 carousel-img" alt="fondo3">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
