--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="./assets/images/maridaje1.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="./assets/images/maridaje1.jpg" class="imagen-tarj rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -115,7 +115,7 @@
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="./assets/images/maridaje2.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="./assets/images/maridaje2.jpg" class="imagen-tarj rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -130,7 +130,7 @@
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="./assets/images/maridaje3.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="./assets/images/maridaje3.jpg" class="imagen-tarj rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -145,7 +145,7 @@
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="./assets/images/maridaje4.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="./assets/images/maridaje4.jpg" class="imagen-tarj rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
