modificacion de estilos

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <!-- Productos -->
-        <section class="product">
+        <section class="container">
             <h3 class="mx-5">Productos destacados</h3>
             <div class="section-boton mx-5">
                 <a href="./page/productos.html" class="section-boton-item">Ver todo</a>
@@ -93,68 +93,72 @@
         </section>
 
         <!-- Información sobre maridaje -->
-        <section class="row">
-          <h3 class="mx-5">Maridajes</h3>
+        <section class="container">
+            <h3 class="mx-5">Maridajes</h3>
+            <div class="row mx-5">
+              <!-- Tarjetas -->
+              <div class="row">
+                <!-- Card 1 -->
+                <div class="card m-3" style="max-width: 500px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="./assets/images/maridaje1.jpg" class="imagen-tarj rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Con quesos semiduros</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
-          <!-- Card 1 -->
-          <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="./assets/images/maridaje1.jpg" class="imagen-tarj rounded-start" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Con quesos semiduros</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <!-- Card 2 -->
+                <div class="card m-3" style="max-width: 500px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="./assets/images/maridaje2.jpg" class="imagen-tarj rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Con alimentos fritos</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="card m-3" style="max-width: 500px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="./assets/images/maridaje3.jpg" class="imagen-tarj rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Con dulces y chocolates</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Card 4 -->
+                <div class="card m-3" style="max-width: 500px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="./assets/images/maridaje4.jpg" class="imagen-tarj rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Con jamones y olivas</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-
-          <!-- Card 2 -->
-          <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="./assets/images/maridaje2.jpg" class="imagen-tarj rounded-start" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Con alimentos fritos</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Card 3 -->
-          <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="./assets/images/maridaje3.jpg" class="imagen-tarj rounded-start" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Con dulces y chocolates</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Card 4 -->
-          <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="./assets/images/maridaje4.jpg" class="imagen-tarj rounded-start" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Con jamones y olivas</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-          </div>
 
         </section>
         
