--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </svg>
               </a>
             </div>
-            
+
           </nav>
     </header>
 
@@ -98,6 +98,8 @@
                 <div id="tarjetas-destacadas" class="row row-cols-auto"></div>
             </div>
         </section>
+
+        <div class="image-inicio m-3 p-5"></div>
 
         <!-- Información sobre maridaje -->
         <section class="container">
