--- a/index.html
+++ b/index.html
@@ -47,11 +47,18 @@
                 </ul>
               </div>
 
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" id="cart-icon" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" class="d-inline-block align-text-top" viewBox="0 0 576 512">
                   <path d="M0 24C0 10.7 10.7 0 24 0L69.5 0c22 0 41.5 12.8 50.6 32l411 0c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3l-288.5 0 5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5L488 336c13.3 0 24 10.7 24 24s-10.7 24-24 24l-288.3 0c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5L24 48C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"/>
                 </svg>
+                <span id="cart-count">0</span>
               </a>
+
+              <div id="cart-dropdown" class="dropdown-content">
+                <ul id="cart-items-list">
+                </ul>
+                <button id="checkout-button" class="btn btn-primary">Pagar</button>
+              </div>
             </div>
 
           </nav>
@@ -229,5 +236,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="/app.js"></script>
+    <script src="/js/detalles.js"></script>
+    <script src="/js/carrito.js"></script>
 </body>
 </html>
