--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
               <div id="cart-dropdown" class="dropdown-content">
                 <ul id="cart-items-list">
                 </ul>
-                <button id="checkout-button" class="btn btn-primary">Pagar</button>
+                <button id="checkout-button" class="btn btn-primary" onclick="location.href='page/carrito.html';">
+                  Ver carrito
+                </button>
+                
               </div>
             </div>
 
