agregado de textos y estilos

--- a/index.html
+++ b/index.html
@@ -126,7 +126,12 @@
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title">Con quesos semiduros</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">
+                          Los quesos semiduros, se maridan perfectamente con vinos tintos jóvenes o con vinos 
+                          blancos de buena acidez. La suavidad de estos quesos se complementa con la estructura 
+                          de un vino como el Cabernet Sauvignon o un Chardonnay, creando una armonía de sabores 
+                          que realza ambas experiencias.
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -141,7 +146,12 @@
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title">Con alimentos fritos</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">
+                          os alimentos fritos, como empanadas o croquetas, se equilibran mejor con vinos 
+                          frescos y burbujeantes. Un espumoso como un cava o un vino blanco con buena acidez, 
+                          como un Sauvignon Blanc, cortará la grasa y refrescará el paladar, destacando los 
+                          sabores sin sobrecargarlos.
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -156,7 +166,11 @@
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title">Con dulces y chocolates</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">
+                          El maridaje con dulces y chocolates es una experiencia indulgente. Los vinos dulces, 
+                          como un Oporto o un Moscato, combinan maravillosamente con postres a base de chocolate 
+                          oscuro, equilibrando la dulzura y potenciando los sabores intensos del cacao.
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -171,7 +185,12 @@
                     <div class="col-md-8">
                       <div class="card-body">
                         <h5 class="card-title">Con jamones y olivas</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">
+                          Los jamones curados y las olivas, con su toque salado y sabroso, se acompañan idealmente 
+                          con un vino tinto suave, como un Pinot Noir, o un vino blanco seco y afrutado. Estos vinos 
+                          destacan la salinidad de los alimentos sin opacar sus sabores, creando una combinación 
+                          deliciosa y equilibrada.
+                        </p>
                       </div>
                     </div>
                   </div>
